2001-10-21  Akim Demaille  <akim@epita.fr>

	* m4/lex.m4: Don't run AC_DECL_YYTEXT, Autoconf does.
	* automake.texi (Macros, Yacc and Lex): Adjust.
	* automake.in ($seen_decl_yytext): Rename as...
	($seen_prog_lex): this.
	(&scan_autoconf_traces): Add AC_PROG_LEX support.
	(&scan_one_autoconf_file, &lang_lex_finish): Adjust.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&scan_autoconf_traces): Add support for
	AM_PATH_LISPDIR and AM_PATH_PYTHON.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* tests/defs (ACLOCAL): Point to the installed aclocaldir is
	libtool is required.
	* tests/lex.test: Run AC_INIT once.
	* tests/ldflags.test, tests/listval.test, tests/suffix2.test:
	Libtool is required.
	* tests/header.test: Built a correct configure.in.
	* tests/defun2.test (configure.in): Be a bit respectful with
	Autoconf, close the macro invocations.
	* tests/confdeps.test: Even when not using aclocal, aclocal.m4
	must be correct.

	* automake.in (scan_autoconf_traces): Add support for
	AC_CANONICAL_HOST, AC_CANONICAL_SYSTEM, A[CM]_PROG_LIBTOOL,
	AM_CONFIG_HEADER, AM_MAINTAINER_MODE.
	* tests/condincl.test (target): Better pattern, to avoid matching
	the definition of `target_alias' which is now properly discovered
	as an AC_SUBST by traces.
	* cond4.test: Better grep pattern: After all, why shouldn't
	TWO_FALSE be AC_SUBST properly.
	* tests/installsh.test (AUTOMAKE, ACLOCAL): Adjust.

2001-10-20  Kevin Ryde <user42@zip.com.au>

	* lib/am/ansi2knr.am (mostlyclean-kr): Only rm *_.c when
	actually using ansi2knr.

	* automake.in (handle_configure): Always put a number on $stamp_name,
	to match AM_CONFIG_HEADER.

2001-10-20  Tom Tromey  <tromey@redhat.com>

	* tests/Makefile.am (TESTS): Added condd.test.
	(XFAIL_TESTS): Added condd.test.
	* tests/condd.test: New file.

2001-10-20  Akim Demaille  <akim@epita.fr>

	* automake.in (&scan_autoconf_traces): Add support for
	AM_C_PROTOTYPES, AM_GNU_GETTEXT, AM_PROG_CC_C_O, and
	AC_CONFIG_AUX_DIR.