@@ -2,7 +2,7 @@
 
 # Make sure libtool is removed.
 # Report from Kevin Dalley
-
+required=libtool
 . $srcdir/defs || exit 1
 
 cat >> configure.in << 'END'
