@@ -2,7 +2,7 @@
 
 # Test to make sure libtool library dependencies are correct.
 # Report from Lars J. Aas.
-
+required=libtool
 . $srcdir/defs || exit 1
 
 cat >> configure.in << 'END'
