@@ -2,7 +2,7 @@
 
 # Test to make sure LTLIBOBJS alone works ok.
 # Report from Vadim Zeitlin.
-
+required=libtool
 . $srcdir/defs || exit 1
 
 cat >> configure.in << 'END'
