@@ -1,7 +1,7 @@
 #! /bin/sh
 
 # Test for PR 72
-
+required=libtool
 . $srcdir/defs || exit 1
 
 cat >> configure.in << 'END'
