@@ -4,10 +4,6 @@
 
 . $srcdir/defs || exit 1
 
-cat > aclocal.m4 << 'END'
-sinclude(sub/p.m4)
-END
-
 mkdir sub
 cat > sub/p.m4 << 'END'
 AC_SUBST(MAGICALPIG)
@@ -16,6 +12,8 @@ END
 : > Makefile.am
 
 $ACLOCAL || exit 1
+echo 'sinclude(sub/p.m4)' >> aclocal.m4
+
 $AUTOMAKE --Wno-error || exit 1
 
 grep MAGICALPIG Makefile.in
