@@ -1,7 +1,7 @@
 #! /bin/sh
 
 # It is ok to have a conditional SUBDIRS when using gettext.
-
+required=gettext
 . $srcdir/defs || exit 1
 
 cat >> configure.in << 'END'
