@@ -1,5 +1,16 @@
 2001-10-21  Akim Demaille  <akim@epita.fr>
 
+	* tests/subdircond.test: Requires gettext.
+	* tests/libobj.test, tests/libobj10.test, tests/libobj2.test,
+	* tests/libobj6.test, tests/libobj9.test, tests/libtool.test,
+	* tests/libtool2.test, tests/ltdeps.test, tests/ltlibobjs.test,
+	* tests/nolink.test, tests/obsolete.test, tests/pr72.test,
+	* tests/sinclude.test, tests/subdircond.test, tests/subobj4.test:
+	Produce valid configure.in, use aclocal appropriately, declare
+	when libtool is required.
+
+2001-10-21  Akim Demaille  <akim@epita.fr>
+
 	* m4/lex.m4: Don't run AC_DECL_YYTEXT, Autoconf does.
 	* automake.texi (Macros, Yacc and Lex): Adjust.
 	* automake.in ($seen_decl_yytext): Rename as...
